--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <h1>Sanglap Mridha<span></span></h1>
                 <a href="#" type="button" class="cta">Resume</a>
 
-                    <a href="https://github.com/sanglap13" type="button" class="link"><img src="./img/square-github.svg"></a>
-                    <a href="https://www.linkedin.com/in/sanglapmridha/" type="button" class="link"><img src="./img/linkedin.svg"></a>
+                    <!-- <a href="https://github.com/sanglap13" type="button" class="link"><img src="./img/square-github.svg"></a>
+                    <a href="https://www.linkedin.com/in/sanglapmridha/" type="button" class="link"><img src="./img/linkedin.svg"></a> -->
         
             </div>
         </div>
@@ -71,7 +71,72 @@
 </section> 
 
 
-    <!-- Skills Section -->
+    <!-- End of Skills Section -->
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="projects container">
+            <div class="projects-header">
+                <h1 class="section-title">Pro<span>j</span>ects</h1>
+            </div>
+            <div class="all-projects">
+                <div class="projects-item">
+                    <div class="projects-info">
+                        <h1>onlyFrnds - A Social Media App</h1>
+                        <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
+                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+                <div class="projects-item">
+                    <div class="projects-info">
+                        <h1>onlyFrnds - A Social Media App</h1>
+                        <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
+                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+                <div class="projects-item">
+                    <div class="projects-info">
+                        <h1>onlyFrnds - A Social Media App</h1>
+                        <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
+                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+                <div class="projects-item">
+                    <div class="projects-info">
+                        <h1>onlyFrnds - A Social Media App</h1>
+                        <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
+                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+                <div class="projects-item">
+                    <div class="projects-info">
+                        <h1>onlyFrnds - A Social Media App</h1>
+                        <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
+                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- End of Projects Section -->
+
+
 
 
 </body>
