--- a/index.html
+++ b/index.html
@@ -84,49 +84,49 @@
                     <div class="projects-info">
                         <h1>onlyFrnds - A Social Media App</h1>
                         <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
-                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature : Responsive UI</p>
                     </div>
-                    <div class="project-img">
+                    <div class="projects-img">
                         <img src="./img/img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="projects-item">
                     <div class="projects-info">
-                        <h1>onlyFrnds - A Social Media App</h1>
-                        <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
-                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                        <h1>Android Scientific Calculator</h1>
+                        <h2>Java, XML</h2>
+                        <p>Built using Android Studio ; Fully functional</p>
                     </div>
-                    <div class="project-img">
+                    <div class="projects-img">
                         <img src="./img/img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="projects-item">
                     <div class="projects-info">
-                        <h1>onlyFrnds - A Social Media App</h1>
-                        <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
-                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                        <h1>Pokemon Card Generator</h1>
+                        <h2>Expressjs, HTML, CSS</h2>
+                        <p>Cards generated using API ;</p>
                     </div>
-                    <div class="project-img">
+                    <div class="projects-img">
                         <img src="./img/img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="projects-item">
                     <div class="projects-info">
-                        <h1>onlyFrnds - A Social Media App</h1>
+                        <h1>Travel Booking System</h1>
                         <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
-                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                        <p>User Login/Register Page ; User Authentication ;</p>
                     </div>
-                    <div class="project-img">
+                    <div class="projects-img">
                         <img src="./img/img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="projects-item">
                     <div class="projects-info">
-                        <h1>onlyFrnds - A Social Media App</h1>
+                        <h1>Dummy</h1>
                         <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
                         <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
                     </div>
-                    <div class="project-img">
+                    <div class="projects-img">
                         <img src="./img/img-1.png" alt="img">
                     </div>
                 </div>
