--- a/index.html
+++ b/index.html
@@ -136,6 +136,65 @@
     </section>
     <!-- End of Projects Section -->
 
+     <!-- About Section -->
+    <section id="about">
+        <div class="about container">
+            <div class="col-left">
+                <div class="about-img">
+                    <img src="./img/img-2.png" alt="img">
+                </div>
+            </div>
+            <div class="col-right">
+                <h1 class="section-title">About <span>me</span></h1>
+                <h2>Computer Science Engineer</h2>
+                <p>am a self-motivated and enthusiastic student, with a passion for learning and a strong desire to develop
+                    my skills in the field of Computer Science. I am a fast learner and always eager to take on new challenges
+                    and believe that every experience is an opportunity to grow and improve. I am seeking an internship or
+                    entry-level position where I can apply and enhance my skills while contributing to a dynamic and
+                    innovative team.</p>
+                    <a href="#" class="cta">Download Resume</a>
+            </div>
+        </div>
+    </section>
+
+      <!-- End of About Section -->
+
+      <!-- Contact Section -->
+     <section id="contact">
+        <div class="contact container">
+            <div><h1 class="section-title">Contact <span>Info</span></h1></div>
+            <div class="contact-items">
+                <div class="contact-item">
+                    <div class="icon"><img width="48" height="48" src="https://img.icons8.com/color/48/linkedin.png" alt="linkedin"/></div>
+                    <div class="contact-info">
+                       <h1>LinkedIn</h1>
+                        <h2>Sanglap Mridha</h2>
+                       <!-- <h2></h2>  -->
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img width="48" height="48" src="https://img.icons8.com/fluency/48/email-open.png" alt="email-open"/></div>
+                    <div class="contact-info">
+                       <h1>Email</h1>
+                        <h2>sanglapmridha@gmail.com</h2>
+                       <h2>mythopeditz@gmail.com</h2> 
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img width="48" height="48" src="https://img.icons8.com/fluency/48/map-marker.png" alt="map-marker"/></div>
+                    <div class="contact-info">
+                       <h1>Address</h1>
+                        <h2>Kolkata, West Bengal</h2>
+                       <h2>India</h2> 
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section> 
+      <!-- End of Contact Section -->
+
+
+
 
 
 
