--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Sanglap Mridha Portfolio</title>
 </head>
 <body>
+    <!-- Header -->
+    <section id="header">
+        <div class="header container">
+            <div class="nav-bar">
+                <div class="brand">
+                    <a href="#hero"><h1><span>S</span>anglap <span>M</span>ridha</h1></a>
+                </div>
+                <div class="nav-list">
+                    <div class="hamburger">
+                        <div class="bar"></div>
+                    </div>
+                    <ul>
+                        <li><a href="#hero" data-after="Home">Home</a></li>
+                        <li><a href="#about" data-after="About">About</a></li>
+                        <li><a href="#skills" data-after="Skills">Skills</a></li>
+                        <li><a href="#projects" data-after="Projects">Projects</a></li>
+                        <li><a href="#contact" data-after="Contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of Header -->
+
+
     <!-- Hero Section -->
     <section id="hero">
         <div class="hero container">
@@ -14,7 +39,7 @@
                 <h1>Hello,<span></span></h1>
                 <h1>My Name is <span></span></h1>
                 <h1>Sanglap Mridha<span></span></h1>
-                <a href="#" type="button" class="cta">Resume</a>
+                <a href="#about" type="button" class="cta">Know More</a>
 
                     <!-- <a href="https://github.com/sanglap13" type="button" class="link"><img src="./img/square-github.svg"></a>
                     <a href="https://www.linkedin.com/in/sanglapmridha/" type="button" class="link"><img src="./img/linkedin.svg"></a> -->
@@ -24,6 +49,29 @@
     </section>
     
     <!-- Hero Section -->
+
+     <!-- About Section -->
+     <section id="about">
+        <div class="about container">
+            <div class="col-left">
+                <div class="about-img">
+                    <img src="./img/img-2.png" alt="img">
+                </div>
+            </div>
+            <div class="col-right">
+                <h1 class="section-title">About <span>me</span></h1>
+                <h2>Computer Science Engineer</h2>
+                <p>am a self-motivated and enthusiastic student, with a passion for learning and a strong desire to develop
+                    my skills in the field of Computer Science. I am a fast learner and always eager to take on new challenges
+                    and believe that every experience is an opportunity to grow and improve. I am seeking an internship or
+                    entry-level position where I can apply and enhance my skills while contributing to a dynamic and
+                    innovative team.</p>
+                    <a href="#" class="cta">Download Resume</a>
+            </div>
+        </div>
+    </section>
+
+      <!-- End of About Section -->
 
     <!-- Skills Section -->
     <section id="skills">   
@@ -42,28 +90,28 @@
                 <img width="64" height="64" src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/external-code-agile-flaticons-lineal-color-flat-icons-2.png" alt="external-code-agile-flaticons-lineal-color-flat-icons-2"/>
                 </div>
                 <h2>Programming Languages</h2>
-                <p>C C++ Java Python</p>
+                <p>C, C++, Java, Python</p>
             </div>
             <div class="skills-item">
                 <div class="icon">
                     <img width="64" height="64" src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/64/external-code-coding-kiranshastry-lineal-color-kiranshastry-2.png" alt="external-code-coding-kiranshastry-lineal-color-kiranshastry-2"/>
                 </div>
                 <h2>Development Tools</h2>
-                <p>HTML CSS Javascript Bootstrap Reactjs Nodejs Expressjs MongoDB MySQL Firebase Android</p>
+                <p>HTML, CSS, Javascript, Bootstrap, Reactjs, Nodejs, Expressjs, MongoDB, MySQL, Firebase, Android</p>
             </div>
             <div class="skills-item">
                 <div class="icon">
                     <img width="64" height="64" src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/64/external-design-coding-kiranshastry-lineal-color-kiranshastry.png" alt="external-design-coding-kiranshastry-lineal-color-kiranshastry"/>
                 </div>
                 <h2>Design</h2>
-                <p>Figma Photoshop</p>
+                <p>Figma, Photoshop</p>
             </div>
             <div class="skills-item">
                 <div class="icon">
                     <img width="64" height="64" src="https://img.icons8.com/external-xnimrodx-blue-xnimrodx/64/external-code-virus-and-hacker-xnimrodx-blue-xnimrodx.png" alt="external-code-virus-and-hacker-xnimrodx-blue-xnimrodx"/>
                 </div>
-                <h2>Others</h2>
-                <p>Git Linux AWS GCP</p>
+                <h2>Tools/Platforms</h2>
+                <p>Git, Linux, AWS, GCP</p>
             </div>
         </div>
 
@@ -136,28 +184,6 @@
     </section>
     <!-- End of Projects Section -->
 
-     <!-- About Section -->
-    <section id="about">
-        <div class="about container">
-            <div class="col-left">
-                <div class="about-img">
-                    <img src="./img/img-2.png" alt="img">
-                </div>
-            </div>
-            <div class="col-right">
-                <h1 class="section-title">About <span>me</span></h1>
-                <h2>Computer Science Engineer</h2>
-                <p>am a self-motivated and enthusiastic student, with a passion for learning and a strong desire to develop
-                    my skills in the field of Computer Science. I am a fast learner and always eager to take on new challenges
-                    and believe that every experience is an opportunity to grow and improve. I am seeking an internship or
-                    entry-level position where I can apply and enhance my skills while contributing to a dynamic and
-                    innovative team.</p>
-                    <a href="#" class="cta">Download Resume</a>
-            </div>
-        </div>
-    </section>
-
-      <!-- End of About Section -->
 
       <!-- Contact Section -->
      <section id="contact">
@@ -193,9 +219,25 @@
      </section> 
       <!-- End of Contact Section -->
 
+     <!-- Footer -->
+     <section id="footer">
+        <div class="footer container">
+            <div class="brand"><h1><span>S</span>anglap <span>M</span>ridha</h1></div>
+            <h2>Computer Science Engineer</h2>
+            <div class="social-icon">
+                <div class="social-item">
+                <a href="#"><img width="48" height="48" src="https://img.icons8.com/fluency/48/linkedin.png" alt="linkedin"/></a>
+            </div>
+            <div class="social-item">
+                <a href="#"><img width="64" height="64" src="https://img.icons8.com/nolan/64/github.png" alt="github"/></a>
+            </div>
+            </div>
+         <p>Copyright © 2023 Sanglap Mridha. All rights reserved</p>   
+        </div>
+     </section>
+     <!-- End of Footer -->
 
-
-
+<script src="./app.js"></script>
 
 
 </body>
