--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <h1>My Name is <span></span></h1>
                 <h1>Sanglap Mridha<span></span></h1>
                 <a href="#about" type="button" class="cta">Know More</a>
-
-                    <!-- <a href="https://github.com/sanglap13" type="button" class="link"><img src="./img/square-github.svg"></a>
-                    <a href="https://www.linkedin.com/in/sanglapmridha/" type="button" class="link"><img src="./img/linkedin.svg"></a> -->
-        
+                    <div class="links">
+                    <a href="https://github.com/sanglap13" type="button" class="link"><img width="64" height="64" src="https://img.icons8.com/nolan/64/github.png" alt="github"/></a>
+                    <a href="https://www.linkedin.com/in/sanglapmridha/" type="button" class="link"><img width="48" height="48" src="https://img.icons8.com/fluency/48/linkedin-circled.png" alt="linkedin-circled"/></a>
+                </div>
             </div>
         </div>
     </section>
@@ -66,7 +66,7 @@
                     and believe that every experience is an opportunity to grow and improve. I am seeking an internship or
                     entry-level position where I can apply and enhance my skills while contributing to a dynamic and
                     innovative team.</p>
-                    <a href="#" class="cta">Download Resume</a>
+                    <a href="./img/SANGLAP's Resume.pdf" download="Sanglap Mridha Resume (13/07/23)" class="cta">Download Resume</a>
             </div>
         </div>
     </section>
@@ -226,10 +226,10 @@
             <h2>Computer Science Engineer</h2>
             <div class="social-icon">
                 <div class="social-item">
-                <a href="#"><img width="48" height="48" src="https://img.icons8.com/fluency/48/linkedin.png" alt="linkedin"/></a>
+                <a href="https://www.linkedin.com/in/sanglapmridha/"><img width="48" height="48" src="https://img.icons8.com/fluency/48/linkedin.png" alt="linkedin"/></a>
             </div>
             <div class="social-item">
-                <a href="#"><img width="64" height="64" src="https://img.icons8.com/nolan/64/github.png" alt="github"/></a>
+                <a href="https://github.com/sanglap13"><img width="64" height="64" src="https://img.icons8.com/nolan/64/github.png" alt="github"/></a>
             </div>
             </div>
          <p>Copyright © 2023 Sanglap Mridha. All rights reserved</p>   
