--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             <div class="col-right">
                 <h1 class="section-title">About <span>me</span></h1>
                 <h2>Computer Science Engineer</h2>
-                <p>am a self-motivated and enthusiastic student, with a passion for learning and a strong desire to develop
+                <p>I am a self-motivated and enthusiastic student, with a passion for learning and a strong desire to develop
                     my skills in the field of Computer Science. I am a fast learner and always eager to take on new challenges
                     and believe that every experience is an opportunity to grow and improve. I am seeking an internship or
                     entry-level position where I can apply and enhance my skills while contributing to a dynamic and
                     innovative team.</p>
-                    <a href="./img/SANGLAP's Resume.pdf" download="Sanglap Mridha Resume (13/07/23)" class="cta">Download Resume</a>
+                    <a href="./img/Sanglap Mridha.pdf" download="Sanglap Mridha Resume (updated 13/07/23)" class="cta">Download Resume</a>
             </div>
         </div>
     </section>
@@ -78,11 +78,7 @@
     <div class="skills container">
         <div class="skills-top">
             <h1 class="section-title">Sk<span>i</span>lls</h1>
-            <p> am a self-motivated and enthusiastic student, with a passion for learning and a strong desire to develop
-                my skills in the field of Computer Science. I am a fast learner and always eager to take on new challenges
-                and believe that every experience is an opportunity to grow and improve. I am seeking an internship or
-                entry-level position where I can apply and enhance my skills while contributing to a dynamic and
-                innovative team.</p>
+            <p> As a Computer Science undergrad, I have studied topics like: Cloud Computing, Object Oriented Programming, Data Stuctures, Database Management System, Data Warehousing & Mining, Distributed DBMS, Computer Networks, Cyber Security & many more. </p>
         </div>
         <div class="skills-bottom">
             <div class="skills-item">
@@ -96,7 +92,7 @@
                 <div class="icon">
                     <img width="64" height="64" src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/64/external-code-coding-kiranshastry-lineal-color-kiranshastry-2.png" alt="external-code-coding-kiranshastry-lineal-color-kiranshastry-2"/>
                 </div>
-                <h2>Development Tools</h2>
+                <h2>Development</h2>
                 <p>HTML, CSS, Javascript, Bootstrap, Reactjs, Nodejs, Expressjs, MongoDB, MySQL, Firebase, Android</p>
             </div>
             <div class="skills-item">
@@ -132,50 +128,50 @@
                     <div class="projects-info">
                         <h1>onlyFrnds - A Social Media App</h1>
                         <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
-                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature : Responsive UI</p>
+                        <p>A full stack web application with login/register page. Key features: User Authentication, Responsive UI, Dark/Light mode support, uploading of images etc. </p>
                     </div>
                     <div class="projects-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="./img/img-upd.jpg" alt="img">
                     </div>
                 </div>
                 <div class="projects-item">
                     <div class="projects-info">
-                        <h1>Android Scientific Calculator</h1>
+                        <h1>Scientific Calculator</h1>
                         <h2>Java, XML</h2>
-                        <p>Built using Android Studio ; Fully functional</p>
+                        <p>A Android Calculator built using Android Studio. The backend consists of Java.</p>
                     </div>
                     <div class="projects-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="./img/img-calc.jpg" alt="img">
                     </div>
                 </div>
                 <div class="projects-item">
                     <div class="projects-info">
                         <h1>Pokemon Card Generator</h1>
                         <h2>Expressjs, HTML, CSS</h2>
-                        <p>Cards generated using API ;</p>
+                        <p>A random Pokemon Card Generator fetching its data from an API.</p>
                     </div>
                     <div class="projects-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="./img/img-poke.jpg" alt="img">
                     </div>
                 </div>
                 <div class="projects-item">
                     <div class="projects-info">
                         <h1>Travel Booking System</h1>
                         <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
-                        <p>User Login/Register Page ; User Authentication ;</p>
+                        <p>A full stack web application. Key features: User Registration & Authentication, Search & Booking functionality, Payment Integration etc.</p>
                     </div>
                     <div class="projects-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="./img/img-upd.jpg" alt="img">
                     </div>
                 </div>
                 <div class="projects-item">
                     <div class="projects-info">
-                        <h1>Dummy</h1>
-                        <h2>MongoDB, Expressjs, Reactjs, Nodejs</h2>
-                        <p>User Login/Register Page ; User Authentication ; Upload Images ; Add Friends ; Dark/Light Mode feature</p>
+                        <h1>Netflix Movie Recommendation</h1>
+                        <h2>Python</h2>
+                        <p>A Movie Recommendation model using Machine Learning. It suggests movies according to the movies currently watched.</p>
                     </div>
                     <div class="projects-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="./img/img-upd.jpg" alt="img">
                     </div>
                 </div>
 
